第一组重构

--- a/前端基础/重构/04-第一组重构/06-封装变量.md
+++ b/前端基础/重构/04-第一组重构/06-封装变量.md
@@ -1,19 +1,154 @@
 # 封装变量
 
-
 ## 示意图
 
 ![LOGO](/public/image/refactoring/EncapsulateVariable.png)
 
-
 ## 动机
 
+重构的作用就是调整程序中的元素。函数相对容易调整一些，因为函数只有一种用法，就是调用。如果想要搬移一处被广泛使用的数据，最好的办法往往是先以函数形式封装所有对该数据的访问。这样，我就能把“重新组织数据”的困难任务转化为“重新组织函数”这个相对简单的任务。
 
+<sapn class="marker-text">对于所有可变的数据，只要它的作用域超出单个函数，我就会将其封装起来，只允许通过函数访问。</sapn>
 
-
+封装数据很重要，不过，不可变数据更重要。如果数据不能修改，就根本不需要数据更新前的验证或者其他逻辑钩子。我可以放心地复制数据，而不用搬移原来的数据——这样就不用修改使用旧数据的代码，也不用担心有些代码获得过时失效的数据。不可变性是强大的代码防腐剂。
 
 ## 做法
 
+- 创建封装函数，在其中访问和更新变量值。
+- 执行静态检查。
+- 逐一修改使用该变量的代码，将其改为调用合适的封装函数。每次替换之后，执行测试。
+- 限制变量的可见性。有时没办法阻止直接访问变量。若果真如此，可以试试将变量改名，再执行测试，找出仍在直接使用该变量的代码。
+- 如果变量的值是一个记录，考虑使用[封装记录（162）](../目录.md#封装记录-162)
 
 ## 范例
 
+### 封装变量
+
+::: code-group
+
+```js [源变量]
+
+let defaultOwner = {
+  firstName: "Martin",
+  lastName: "Fowler"
+};
+
+// 变量使用
+spaceship.owner = defaultOwner;
+
+
+// 更新数据
+defaultOwner = {
+  firstName: "Rebecca",
+  lastName: "Parsons"
+};
+
+```
+
+```js [基础封装]
+
+let defaultOwner = {
+  firstName: "Martin",
+  lastName: "Fowler"
+};
+
+function getDefaultOwner() {
+ return defaultOwner;
+}
+function setDefaultOwner(arg) {
+ defaultOwner = arg;
+}
+
+// 调用处替换
+spaceship.owner = getDefaultOwner();
+
+// 变量赋值处替换
+setDefaultOwner({
+  firstName: "Rebecca",
+  lastName: "Parsons"
+});
+
+```
+
+```js [限制可见性]
+// 目的
+// 1、检查是否遗漏了变量的引用
+// 2、可以保证以后的代码也不会直接访问该变量
+
+// 创建 defaultOwner.js
+
+let defaultOwner = {
+ firstName: "Martin",
+ lastName: "Fowler"
+}; 
+export function getDefaultOwner()    {
+ return defaultOwner;
+} 
+export function setDefaultOwner(arg) {
+ defaultOwner = arg;
+}
+
+```
+
+:::
+
+### 封装值
+
+前面介绍的基本重构手法对数据结构的引用做了封装，使我能控制对该数据结构的访问和重新赋值，但并不能控制对结构内部数据项的修改：
+
+```js
+const owner1 = defaultOwner(); 
+assert.equal("Fowler", owner1.lastName, "when set"); 
+const owner2 = defaultOwner();
+owner2.lastName = "Parsons"; // 修改值
+// is this ok?
+assert.equal("Parsons", owner1.lastName, "after change owner2"); 
+
+```
+
+前面的基本重构手法只封装了对最外层数据的引用。很多时候这已经足够了。但也有很多时候，我需要把封装做得更深入，不仅控制对变量引用的修改，还要控制对变量内容的修改。
+
+这有两个办法可以做到。最简单的办法是<sapn class="marker-text">禁止对数据结构内部的数值做任何修改。</sapn>我最喜欢的一种做法是<sapn class="marker-text">修改取值函数，使其返回该数据的一份副本。</sapn>
+
+```js
+let defaultOwnerData = {
+ firstName: "Martin",
+ lastName: "Fowler"
+};
+export function defaultOwner() {
+ return Object.assign({}, defaultOwnerData); // [!code ++]
+} 
+export function setDefaultOwner(arg) {
+ defaultOwnerData = arg;
+}
+
+```
+
+另一种做法是阻止对数据的修改，比如通过[封装记录（162）](../目录.md#封装记录-162)）就能很好地实现这一效果。
+
+```js
+let defaultOwnerData = {
+  firstName: "Martin",
+  lastName: "Fowler"
+ };
+export function defaultOwner()       {
+ return new Person(defaultOwnerData);
+} 
+export function setDefaultOwner(arg) {
+ // 赋值失效
+ defaultOwnerData = arg;
+}
+
+class Person { 
+　constructor(data) {
+　　this._lastName = data.lastName; 
+　　this._firstName = data.firstName
+　}
+ get lastName() {
+  return this._lastName;
+ }
+ get firstName() {
+  return this._firstName;
+ }
+}
+```
