--- a/前端基础/重构/04-第一组重构/07-变量改名.md
+++ b/前端基础/重构/04-第一组重构/07-变量改名.md
@@ -1,1 +1,68 @@
 # 变量改名
+
+
+## 示意图
+
+![LOGO](/public/image/refactoring/RenameVariable.png)
+
+## 动机
+
+好的命名是整洁编程的核心。变量可以很好地解释一段程序在干什么——如果变量名起得好的话。
+
+
+
+## 做法
+
+如果变量被广泛使用，考虑运用[封装变量（132）](../目录.md#封装变量-132)将其封装起来。找出所有使用该变量的代码，逐一修改。
+
+
+
+
+## 范例
+
+如果变量的作用域不止于单个函数，问题就会出现。代码库的各处可能有很多地方使用它：
+
+
+::: code-group
+
+```js [源]
+let tpHd = "untitled";
+
+// 使用1
+result += `<h1>${tpHd}</h1>`;
+
+// 使用2
+tpHd = obj['articleTitle'];
+```
+
+```js [封装变量（132）]
+result += `<h1>${title()}</h1>`;
+
+setTitle(obj['articleTitle']); 
+
+function title(){
+  return tpHd;
+}
+function setTitle(arg) {
+  tpHd = arg;
+}
+
+```
+:::
+
+如果我想改名的是一个常量（或者在客户端看来就像是常量的元素）​，我可以复制这个常量，这样既不需要封装，又可以逐步完成改名。假如原来的变量声明是这样：
+
+::: code-group
+
+```js [源变量]
+const cpyNm = "Acme Gooseberries";
+```
+
+```js [副本]
+const companyName = "Acme Gooseberries"; 
+const cpyNm = companyName;
+```
+
+:::
+
+有了这个副本，我就可以逐一修改引用旧常量的代码，使其引用新的常量。全部修改完成后，我会删掉旧的常量。
