--- a/前端基础/重构/04-第一组重构/09-函数组合成类.md
+++ b/前端基础/重构/04-第一组重构/09-函数组合成类.md
@@ -1,1 +1,243 @@
 # 函数组合成类
+
+## 示意图
+
+![LOGO](/public/image/refactoring/CombineFunctionsIntoClass.png)
+
+## 动机
+
+类，在大多数现代编程语言中都是基本的构造。<sapn class="marker-text">它们把数据与函数捆绑到同一个环境中，将一部分数据与函数暴露给其他程序元素以便协作。</sapn>它们是面向对象语言的首要构造，在其他程序设计方法中也同样有用。
+
+<sapn class="marker-text">如果发现一组函数形影不离地操作同一块数据（通常是将这块数据作为参数传递给函数）​，我就认为，是时候组建一个类了。</sapn>
+
+使用类有一大好处：客户端可以修改对象的核心数据，通过计算得出的派生数据则会自动与核心数据保持一致。
+
+## 做法
+
+- 运用[封装记录（162）](../目录.md#封装记录-162)对多个函数共用的数据记录加以封装。
+  - 如果多个函数共用的数据还未组织成记录结构，则先运用[引入参数对象（140）](../目录.md#引入参数对象-140)将其组织成记录。
+- 对于使用该记录结构的每个函数，运用[搬移函数（198）](../目录.md#搬移函数-198)将其移入新类。
+  - 如果函数调用时传入的参数已经是新类的成员，则从参数列表中去除之。
+- 用以处理该数据记录的逻辑可以用[提炼函数（106）](../目录.md#提炼函数-106)提炼出来，并移入新类。
+
+## 范例
+
+```js
+reading = {
+ customer: "ivan",
+ quantity: 10, 
+ month: 5, 
+ year: 2017
+};
+
+```
+
+::: code-group
+
+```js [源]
+
+// 客户端1
+const aReading = acquireReading();
+const baseCharge = baseRate(
+ aReading.month,
+ aReading.year) * aReading.quantity;
+ 
+// 客户端2
+const aReading = acquireReading();
+const base = baseRate(
+  aReading.month,
+  aReading.year
+ ) * aReading.quantity; 
+const taxableCharge = Math.max(
+  0, 
+  base - taxThreshold(aReading.year)
+ );
+
+
+// 客户端3
+const aReading = acquireReading();
+const basicChargeAmount = calculateBaseCharge(aReading);
+function calculateBaseCharge(aReading) {
+ return baseRate(
+  aReading.month,
+  aReading.year
+ ) * aReading.quantity;
+}
+```
+
+```js [数据变类]
+class Reading {
+　constructor(data) {
+　　this._customer = data.customer;
+　　this._quantity = data.quantity;
+　　this._month = data.month;
+　　this._year = data.year;
+　}
+　get customer() {
+   return this._customer;
+  }
+　get quantity() {
+   return this._quantity;
+  }
+　get month() {
+   return this._month;
+  }
+　get year() {
+   return this._year;
+  }
+}
+
+
+```
+
+```js [搬移函数（198）]
+
+class Reading {
+　constructor(data) {
+　　this._customer = data.customer;
+　　this._quantity = data.quantity;
+　　this._month = data.month;
+　　this._year = data.year;
+　}
+　get customer() {
+   return this._customer;
+  }
+　get quantity() {
+   return this._quantity;
+  }
+　get month() {
+   return this._month;
+  }
+　get year() {
+   return this._year;
+  }
+
+ get calculateBaseCharge() { // [!code ++]
+   return baseRate(this.month, this.year) * this.quantity;
+ }
+}
+
+// 客户端3
+const rawReading = acquireReading(); 
+const basicChargeAmount = calculateBaseCharge(aReading);// [!code --]
+const aReading = new Reading(rawReading);// [!code ++]
+const basicChargeAmount = aReading.calculateBaseCharge;// [!code ++]
+
+
+```
+
+```js [更新名字]
+class Reading {
+　constructor(data) {
+　　this._customer = data.customer;
+　　this._quantity = data.quantity;
+　　this._month = data.month;
+　　this._year = data.year;
+　}
+　get customer() {
+   return this._customer;
+  }
+　get quantity() {
+   return this._quantity;
+  }
+　get month() {
+   return this._month;
+  }
+　get year() {
+   return this._year;
+  }
+
+  get calculateBaseCharge() { // [!code --]
+  get baseCharge() { // [!code ++]
+   return baseRate(this.month, this.year) * this.quantity;
+  }
+}
+
+```
+
+```js [更新调用方]
+
+// 客户端1
+const rawReading = acquireReading(); 
+const baseCharge = baseRate( // [!code --]
+ aReading.month, // [!code --]
+ aReading.year) * aReading.quantity; // [!code --]
+const aReading = new Reading(rawReading);  // [!code ++]
+const baseCharge = aReading.baseCharge;  // [!code ++]
+
+// 客户端2
+const rawReading = acquireReading(); 
+const base = baseRate( // [!code --]
+  aReading.month, // [!code --]
+  aReading.year // [!code --]
+ ) * aReading.quantity;  // [!code --]
+const aReading = new Reading(rawReading);// [!code ++]
+const taxableCharge = Math.max( 
+  0, 
+  base - taxThreshold(aReading.year) // [!code --]
+  aReading.baseCharge - taxThreshold(aReading.year) // [!code ++]
+ );
+ 
+// 客户端3
+const rawReading = acquireReading(); 
+const aReading = new Reading(rawReading);
+const basicChargeAmount = aReading.calculateBaseCharge;// [!code --]
+const basicChargeAmount = aReading.baseCharge; // [!code ++]
+
+
+```
+
+```js [提炼函数（106）]
+function taxableChargeFn(aReading) {
+  return Math.max(0, aReading.baseCharge - taxThreshold(aReading.year));
+}
+
+// 客户端2
+const rawReading = acquireReading(); 
+const aReading = new Reading(rawReading);
+const taxableCharge = Math.max( // [!code --]
+  0, aReading.baseCharge - taxThreshold(aReading.year) // [!code --]
+);// [!code --]
+const taxableCharge = taxableChargeFn(aReading);// [!code ++]
+
+```
+
+```js [搬移函数（198）]
+class Reading {
+　constructor(data) {
+　　this._customer = data.customer;
+　　this._quantity = data.quantity;
+　　this._month = data.month;
+　　this._year = data.year;
+　}
+　get customer() {
+   return this._customer;
+  }
+　get quantity() {
+   return this._quantity;
+  }
+　get month() {
+   return this._month;
+  }
+　get year() {
+   return this._year;
+  }
+  get baseCharge() {
+   return baseRate(this.month, this.year) * this.quantity;
+  }
+  get taxableCharge() {
+    return Math.max(0, this.baseCharge - taxThreshold(this.year));
+  }
+}
+
+// 客户端2
+const rawReading = acquireReading(); 
+const aReading = new Reading(rawReading);
+const taxableCharge = taxableChargeFn(aReading);// [!code --]
+const taxableCharge = aReading.taxableCharge; // [!code ++]
+```
+
+:::
+
+
+
