--- a/前端基础/重构/04-第一组重构/11-拆分阶段.md
+++ b/前端基础/重构/04-第一组重构/11-拆分阶段.md
@@ -1,1 +1,169 @@
 # 拆分阶段
+
+
+## 示意图
+
+![LOGO](/public/image/refactoring/SplitPhase.png)
+
+
+## 动机
+
+<sapn class="marker-text">每当看见一段代码在同时处理两件不同的事，我就想把它拆分成各自独立的模块，</sapn>因为这样到了需要修改的时候，我就可以单独处理每个主题，而不必同时在脑子里考虑两个不同的主题。如果运气够好的话，我可能只需要修改其中一个模块，完全不用回忆起另一个模块的诸般细节。
+
+最简洁的拆分方法之一，就是把一大段行为分成顺序执行的两个阶段。
+
+
+编译器是最典型的例子。编译器的任务很直观：接受文本（用某种编程语言编写的代码）作为输入，将其转换成某种可执行的格式（例如针对某种特定硬件的目标码）​。随着经验加深，我们发现把这项大任务拆分成一系列阶段会很有帮助：<sapn class="marker-text">首先对文本做词法分析，然后把token解析成语法树，然后再对语法树做几步转换（如优化）​，最后生成目标码。每一步都有边界明确的范围，我可以聚焦思考其中一步，而不用理解其他步骤的细节。</sapn>
+
+
+## 做法
+
+- 将第二阶段的代码提炼成独立的函数。
+- 引入一个中转数据结构，将其作为参数添加到提炼出的新函数的参数列表中。
+- 逐一检查提炼出的“第二阶段函数”的每个参数。如果某个参数被第一阶段用到，就将其移入中转数据结构。每次搬移之后都要执行测试。
+  - 有时第二阶段根本不应该使用某个参数。果真如此，就把使用该参数得到的结果全都提炼成中转数据结构的字段，然后用[搬移语句到调用者（217）](../目录.md#搬移语句到调用者-217)把使用该参数的代码行搬移到“第二阶段函数”之外。
+- 对第一阶段的代码运用[提炼函数（106）](../目录.md#提炼函数-106)，让提炼出的函数返回中转数据结构。
+  - 也可以把第一阶段提炼成一个变换（transform）对象。
+
+## 范例
+
+
+```js
+function priceOrder(product, quantity, shippingMethod) { 
+　const basePrice = product.basePrice * quantity;
+　const discount = Math.max(quantity - product.discountThreshold, 0)
+　　　　　* product.basePrice * product.discountRate;
+　const shippingPerCase = (basePrice > shippingMethod.discountThreshold)
+　　　　　? shippingMethod.discountedFee : shippingMethod.feePerCase; 
+　const shippingCost = quantity * shippingPerCase;
+　const price = basePrice - discount + shippingCost; 
+　return price;
+}
+
+```
+
+::: code-group
+
+```js [提炼函数（106）]
+
+function priceOrder(product, quantity, shippingMethod) { 
+　const basePrice = product.basePrice * quantity;
+　const discount = Math.max(quantity - product.discountThreshold, 0)
+　　　　　* product.basePrice * product.discountRate;
+　const price = applyShipping(
+    basePrice,
+    shippingMethod,
+    quantity,
+    discount
+  );
+　return price;
+}
+
+function applyShipping(basePrice, shippingMethod, quantity, discount) {
+　const shippingPerCase = (basePrice > shippingMethod.discountThreshold)
+　　　　　? shippingMethod.discountedFee : shippingMethod.feePerCase; 
+　const shippingCost = quantity * shippingPerCase;
+　const price = basePrice - discount + shippingCost; 
+　return price;
+}
+```
+
+```js [中转数据结构]
+function priceOrder(product, quantity, shippingMethod) { 
+　const basePrice = product.basePrice * quantity;
+　const discount = Math.max(quantity - product.discountThreshold, 0)
+　　　　　* product.basePrice * product.discountRate;
+　const priceData = {}; // [!code ++]
+　const price = applyShipping(
+    priceData, // [!code ++]
+    basePrice,
+    shippingMethod,
+    quantity,
+    discount
+  ); 
+　return price;
+}
+
+function applyShipping(
+    priceData,
+    basePrice,
+    shippingMethod,
+    quantity,
+    discount
+) { 
+　const shippingPerCase = (basePrice > shippingMethod.discountThreshold)
+　　　　　? shippingMethod.discountedFee : shippingMethod.feePerCase; 
+　const shippingCost = quantity * shippingPerCase;
+　const price = basePrice - discount + shippingCost; 
+　return price;
+}
+
+```
+
+```js [移除basePrice]
+
+function priceOrder(product, quantity, shippingMethod) { 
+　const basePrice = product.basePrice * quantity;
+　const discount = Math.max(quantity - product.discountThreshold, 0)
+　　　　　* product.basePrice * product.discountRate; 
+　const priceData = {
+    basePrice: basePrice // [!code ++]
+  };
+　const price = applyShipping(
+    priceData,
+    basePrice,
+    shippingMethod,
+    quantity,
+    discount
+  ); 
+　return price;
+}
+function applyShipping(
+    priceData,
+    basePrice,
+    shippingMethod,
+    quantity,
+    discount
+) { 
+  const shippingPerCase = (basePrice > shippingMethod.discountThreshold) // [!code --]
+　　　　　? shippingMethod.discountedFee : shippingMethod.feePerCase;  // [!code --]
+　const shippingPerCase = ( // [!code ++]
+    priceData.basePrice > shippingMethod.discountThreshold // [!code ++]
+    ) // [!code ++]
+　　　　　? shippingMethod.discountedFee : shippingMethod.feePerCase; // [!code ++]
+　const shippingCost = quantity * shippingPerCase;
+　const price = priceData.basePrice - discount + shippingCost; 
+　return price;
+}
+
+```
+
+```js [提炼独立函数]
+
+function priceOrder(product, quantity, shippingMethod) { 
+　const priceData = calculatePricingData(product, quantity); 
+　const price = applyShipping(priceData, shippingMethod); 
+　return price;
+}
+
+function calculatePricingData(product, quantity) { // [!code ++]
+　const basePrice = product.basePrice * quantity;
+　const discount = Math.max(quantity - product.discountThreshold, 0)
+　　　　　* product.basePrice * product.discountRate;
+　return {
+    basePrice: basePrice,
+    quantity: quantity,
+    discount:discount
+  };
+}
+
+function applyShipping(priceData, shippingMethod) {
+　const shippingPerCase = (
+    priceData.basePrice > shippingMethod.discountThreshold
+  ) ? shippingMethod.discountedFee : shippingMethod.feePerCase; 
+　const shippingCost = priceData.quantity * shippingPerCase;
+　const price = priceData.basePrice - priceData.discount + shippingCost; 
+　return price;
+}
+```
+:::
