--- a/前端基础/重构/04-第一组重构/10-函数组合成变换.md
+++ b/前端基础/重构/04-第一组重构/10-函数组合成变换.md
@@ -1,1 +1,130 @@
 # 函数组合成变换
+
+## 示意图
+
+![LOGO](/public/image/refactoring/CombineFunctionsIntoTransform.png)
+
+## 动机
+
+在软件中，经常需要把数据“喂”给一个程序，让它再计算出各种派生信息。这些派生数值可能会在几个不同地方用到，因此这些计算逻辑也常会在用到派生数据的地方重复。我更愿意把所有计算派生数据的逻辑收拢到一处，这样始终可以在固定的地方找到和更新这些逻辑，避免到处重复。
+
+<sapn class="marker-text">一个方式是采用数据变换（transform）函数：这种函数接受源数据作为输入，计算出所有的派生数据，将派生数据以字段形式填入输出数据。有了变换函数，我就始终只需要到变换函数中去检查计算派生数据的逻辑。</sapn>
+
+我喜欢把函数组合起来的原因之一，是为了避免计算派生数据的逻辑到处重复
+
+## 做法
+
+- 创建一个变换函数，输入参数是需要变换的记录，并直接返回该记录的值。
+  - 这一步通常需要对输入的记录做深复制（deep copy）​。此时应该写个测试，确保变换不会修改原来的记录。
+- 挑选一块逻辑，将其主体移入变换函数中，把结果作为字段添加到输出记录中。修改客户端代码，令其使用这个新字段。
+- 针对其他相关的计算逻辑，重复上述步骤。
+
+## 范例
+
+```js
+reading = {
+ customer: "ivan",
+ quantity: 10,
+ month: 5,
+ year: 2017
+};
+
+// 客户端1
+const aReading = acquireReading();
+const baseCharge = baseRate(
+ aReading.month,
+ aReading.year
+) * aReading.quantity;
+
+// 客户端2
+const aReading = acquireReading();
+const base = baseRate(
+ aReading.month,
+ aReading.year
+) * aReading.quantity; 
+const taxableCharge = Math.max(0, base - taxThreshold(aReading.year));
+
+// 客户端3
+const aReading = acquireReading();
+const basicChargeAmount = calculateBaseCharge(aReading);
+
+function calculateBaseCharge(aReading) {
+  return baseRate(aReading.month, aReading.year) * aReading.quantity;
+}
+```
+
+把所有这些计算派生数据的逻辑搬移到一个变换函数中，该函数接受原始的“读数”作为输入，输出则是增强的“读数”记录，其中包含所有共用的派生数据。
+
+::: code-group
+
+```js [变换函数]
+function enrichReading(original) { 
+  const result = _.cloneDeep(original); 
+  return result;
+}
+
+```
+
+```js [增强]
+
+// 客户端3
+const rawReading = acquireReading();
+const aReading = enrichReading(rawReading);// [!code ++]
+const basicChargeAmount = calculateBaseCharge(aReading);
+
+```
+
+```js [搬移函数（198）]
+function enrichReading(original) {
+  const result = _.cloneDeep(original);
+  result.baseCharge = calculateBaseCharge(result);// [!code ++]
+  return result;
+}
+
+// 更新客户端3
+const rawReading = acquireReading();
+const aReading = enrichReading(rawReading);
+const basicChargeAmount = calculateBaseCharge(aReading);// [!code --]
+const basicChargeAmount = aReading.baseCharge;// [!code ++]
+```
+
+```js [客户端1]
+
+const rawReading = acquireReading();
+const baseCharge = baseRate( // [!code --]
+ aReading.month, // [!code --]
+ aReading.year // [!code --]
+) * aReading.quantity; // [!code --]
+const aReading = enrichReading(rawReading); // [!code ++]
+const baseCharge = aReading.baseCharge; // [!code ++]
+
+```
+
+```js [客户端2]
+const aReading = acquireReading();
+const base = baseRate( // [!code --]
+ aReading.month, // [!code --]
+ aReading.year // [!code --]
+) * aReading.quantity;  // [!code --]
+const rawReading = acquireReading(); // [!code ++]
+const aReading = enrichReading(rawReading); // [!code ++]
+const base = aReading.baseCharge; // [!code ++]
+const taxableCharge = Math.max(0, base - taxThreshold(aReading.year));
+```
+
+```js [搬移函数]
+function enrichReading(original) { 
+  const result = _.cloneDeep(original);
+  result.baseCharge = calculateBaseCharge(result);
+  result.taxableCharge = 
+    Math.max(0, result.baseCharge - taxThreshold(result.year));
+  return result;
+}
+
+// 适用方
+const rawReading = acquireReading();
+const aReading = enrichReading(rawReading); 
+const taxableCharge = aReading.taxableCharge;// [!code ++]
+```
+
+:::
