--- a/前端基础/重构/05-封装/01-封装记录.md
+++ b/前端基础/重构/05-封装/01-封装记录.md
@@ -2,10 +2,329 @@
 
 ## 示意图
 
+![LOGO](/public/image/refactoring/EncapsulateRecord.png)
 
 ## 动机
 
+分解模块时最重要的标准，也许就是识别出那些模块应该对外界隐藏的小秘密了[Parnas]​。数据结构无疑是最常见的一种秘密。
+
+<sapn class="marker-text">类是为隐藏信息而生的。</sapn>
+
+这就是对于可变数据，我总是更偏爱使用类对象而非记录的原因。对象可以隐藏结构的细节。用户不必追究存储的细节和计算的过程。同时，这种封装还有助于字段的改名：我可以重新命名字段，但同时提供新老字段名的访问方法，这样我就可以渐进地修改调用方，直到替换全部完成。
+
+记录型结构可以有两种类型：一种需要声明合法的字段名字，另一种可以随便用任何字段名字。后者常由语言库本身实现，并通过类的形式提供出来，这些类称为散列（hash）​、映射（map）​、散列映射（hashmap）​、字典（dictionary）或关联数组（associative array）等。
 
 ## 做法
 
+- 对持有记录的变量使用[封装变量（132）](../目录.md#封装变量-132)，将其封装到一个函数中。
+- 创建一个类，将记录包装起来，并将记录变量的值替换为该类的一个实例。然后在类上定义一个访问函数，用于返回原始的记录。修改封装变量的函数，令其使用这个访问函数。
+- 新建一个函数，让它返回该类的对象，而非那条原始的记录。对于该记录的每处使用点，将原先返回记录的函数调用替换为那个返回实例对象的函数调用。使用对象上的访问函数来获取数据的字段，如果该字段的访问函数还不存在，那就创建一个。每次更改之后运行测试。
+- 移除类对原始记录的访问函数，那个容易搜索的返回原始数据的函数也要一并删除。
+- 如果记录中的字段本身也是复杂结构，考虑对其再次应用[封装记录（162）](../目录.md#封装记录-162)）或[封装集合（170）](../目录.md#封装集合-170)手法。
+
 ## 范例
+
+### 常量封装记录
+
+首先，我从一个常量开始，该常量在程序中被大量使用。
+
+```js
+
+const organization = {
+ name: "Acme Gooseberries",
+ country: "GB"
+};
+
+```
+
+::: code-group
+
+```js [源]
+
+// 使用
+result += `<h1>${organization.name}</h1>`;
+
+organization.name = newName;
+
+
+```
+
+```js [封装变量（132）]
+function getRawDataOfOrganization() {
+ return organization;
+}
+// 使用
+result += `
+ <h1>${getRawDataOfOrganization().name}</h1>
+`;
+
+getRawDataOfOrganization().name = newName;
+```
+
+```js [类替换记录]
+
+class Organization { 
+  constructor(data) {
+    this._data = data;
+  }
+}
+
+// 顶层作用域
+const organization = new Organization(
+ {name: "Acme Gooseberries", country: "GB"}
+);
+
+function getRawDataOfOrganization() {
+ return organization._data;
+}
+// 返回实例
+function getOrganization() {
+ return organization;
+}
+
+```
+
+```js [添加设置值]
+
+class Organization { 
+  constructor(data) {
+    this._data = data;
+  }
+  set name(aString) {
+   this._data.name = aString;
+  }
+  get name() {
+   return this._data.name;
+  }
+}
+
+// 客户端使用
+getOrganization().name = newName;
+
+
+result += `<h1>${getOrganization().name}</h1>`;
+```
+
+```js [_data里的字段展开到对象中]
+class Organization { 
+　constructor(data) {
+　　this._name = data.name; 
+　　this._country = data.country;
+　}
+　get name()    {
+  return this._name;
+ }
+　set name(aString) {
+   this._name = aString;
+ } 
+　get country(){
+   return this._country;
+ }
+　set country(aCountryCode) {
+   this._country = aCountryCode;
+ }
+}
+
+```
+
+:::
+
+### 封装嵌套记录
+
+上面的例子将记录的浅复制展开到了对象里，但当我处理深层嵌套的数据（比如来自JSON文件的数据）时，又该怎么办呢？
+
+```json
+customerData = {
+ "1920": {
+ 　name: "martin", 
+ 　id: "1920",
+ 　usages: { 
+ 　　"2016": {
+ 　　　"1": 50,
+ 　　　"2": 55,
+ 　　　// remaining months of the year
+ 　　}, 
+ 　　"2015": {
+ 　　　"1": 70,
+ 　　　"2": 63,
+ 　　　// remaining months of the year
+ 　　}
+ 　}
+ },
+ "38673": {
+ 　name: "neal",
+ 　id: "38673",
+  // ....
+ }
+ 　// more customers in a similar form
+}
+
+```
+
+对嵌套数据的更新和读取可以进到更深的层级。
+
+::: code-group
+
+```js [源]
+
+// 更新数据
+customerData[customerID].usages[year][month] = amount;
+
+// 读取数据
+function compareUsage (customerID, laterYear, month) {
+　const later = customerData[customerID].usages[laterYear][month]; 
+　const earlier = customerData[customerID].usages[laterYear - 1][month]; 
+　return {
+  laterAmount: later,
+  change: later - earlier
+ };
+}
+
+```
+
+```js [封装变量（132）]
+
+function getRawDataOfCustomers() {
+ return customerData;
+} 
+function setRawDataOfCustomers(arg) {
+ customerData = arg;
+}
+
+// 更新数据
+getRawDataOfCustomers()[customerID].usages[year][month] = amount;
+
+// 读取数据
+function compareUsage (customerID, laterYear, month) {
+  const later = 
+  getRawDataOfCustomers()[customerID].usages[laterYear][month]; 
+  const earlier = 
+  getRawDataOfCustomers()[customerID].usages[laterYear - 1][month]; 
+  return {
+   laterAmount: later,
+   change: later - earlier
+  };
+}
+
+```
+
+```js [创建一个类]
+
+class CustomerData { 
+  constructor(data) {
+    this._data = data;
+  }
+}
+
+// 顶层作用域
+function getCustomerData() {
+ return customerData;
+}
+function getRawDataOfCustomers() {
+ return customerData._data;
+}
+function setRawDataOfCustomers(arg) {
+ customerData = new CustomerData(arg); // [!code ++]
+}
+
+```
+
+```js [设值函数]
+
+setUsage(customerID, year, month, amount);
+
+function setUsage(customerID, year, month, amount) { 
+  getRawDataOfCustomers()[customerID].usages[year][month] = amount;
+}
+
+
+```
+
+```js [搬移到类]
+
+class CustomerData { 
+  constructor(data) {
+    this._data = data;
+  }
+
+  setUsage(customerID, year, month, amount) { 
+    this._data[customerID].usages[year][month] = amount;
+  }
+
+}
+
+// 更新赋值
+getCustomerData().setUsage(customerID, year, month, amount);
+```
+
+```js [返回副本]
+
+// 顶层作用域
+function getCustomerData() {
+ return customerData;
+}
+function getRawDataOfCustomers() {
+ return customerData.rawData;
+}
+function setRawDataOfCustomers(arg) {
+ customerData = new CustomerData(arg);
+}
+
+
+class CustomerData { 
+  constructor(data) {
+    this._data = data;
+  }
+
+  setUsage(customerID, year, month, amount) { 
+    this._data[customerID].usages[year][month] = amount;
+  }
+
+  get rawData() {
+    return _.cloneDeep(this._data);
+  }
+
+}
+
+```
+
+```js [搬移读取]
+
+class CustomerData { 
+  constructor(data) {
+    this._data = data;
+  }
+
+  setUsage(customerID, year, month, amount) { 
+    this._data[customerID].usages[year][month] = amount;
+  }
+
+  get rawData() {
+    return _.cloneDeep(this._data);
+  }
+  usage(customerID, year, month) {
+    return this._data[customerID].usages[year][month];
+  }
+}
+
+// 顶层作用域
+function getCustomerData() {
+ return customerData;
+}
+function compareUsage (customerID, laterYear, month) {
+  const later = 
+    getCustomerData().usage(customerID, laterYear, month); 
+  const earlier = 
+    getCustomerData().usage(customerID, laterYear - 1, month); 
+  return {
+    laterAmount: later,
+    change: later - earlier
+ };
+}
+```
+
+:::
+
+
+这种处理方式的美妙之处在于，它为customerData提供了一份清晰的API列表，清楚描绘了该类的全部用途。
+
