--- a/前端基础/重构/05-封装/02-封装集合.md
+++ b/前端基础/重构/05-封装/02-封装集合.md
@@ -1,12 +1,131 @@
 # 封装集合
 
-
 ## 示意图
 
+![LOGO](/public/image/refactoring/EncapsulateCollection.png)
 
 ## 动机
 
+我喜欢封装程序中的所有可变数据。这使我很容易看清楚数据被修改的地点和修改方式。
+
+<sapn class="marker-text">我们通常鼓励封装——使用面向对象技术的开发者对封装尤为重视——但封装集合时人们常常犯一个错误：只对集合变量的访问进行了封装，但依然让取值函数返回集合本身。这使得集合的成员变量可以直接被修改，而封装它的类则全然不知，无法介入。</sapn>
+
+为避免此种情况，我会在类上提供一些修改集合的方法——通常是“添加”和“移除”方法。不要让集合的取值函数返回原始集合，这就避免了客户端的意外修改。
+
+一种避免直接修改集合的方法是，永远不直接返回集合的值。这种方法提倡。
 
 ## 做法
 
+- 如果集合的引用尚未被封装起来，先用[封装变量（132）](../目录.md#封装变量-132)封装它。
+- 在类上添加用于“添加集合元素”和“移除集合元素”的函数。
+  - 如果存在对该集合的设值函数，尽可能先用移除设值函数（331）移除它。如果不能移除该设值函数，至少让它返回集合的一份副本。
+- 查找集合的引用点。如果有调用者直接修改集合，令该处调用使用新的添加/移除元素的函数。每次修改后执行测试。
+- 修改集合的取值函数，使其返回一份只读的数据，可以使用只读代理或数据副本。
+
 ## 范例
+
+假设有个人（Person）要去上课。我们用一个简单的Course来表示“课程”​。
+
+::: code-group
+
+```js [源]
+
+class Person {
+ constructor (name) { 
+  this._name = name; 
+  this._courses = [];
+ }
+ get name() {
+   return this._name;
+ }
+ get courses() {
+   return this._courses;
+ }
+ set courses(aList) {
+   this._courses = aList;
+ }
+}
+
+class Course {
+ constructor(name, isAdvanced) { 
+  this._name = name; 
+  this._isAdvanced = isAdvanced;
+ }
+ get name() {
+  return this._name;
+ }
+ get isAdvanced() {
+  return this._isAdvanced;
+ }
+}
+
+
+// 客户端会使用课程集合来获取课程的相关信息。
+numAdvancedCourses = aPerson.courses
+  .filter(c => c.isAdvanced)
+  .length
+;
+```
+
+```js [弊端]
+
+有些开发者可能觉得这个类已经得到了恰当的封装，
+毕竟，所有的字段都被访问函数保护到了。
+但我要指出，对课程列表的封装还不完整。
+诚然，对列表整体的任何更新操作，都能通过设值函数得到控制。
+
+// 客户端代码
+
+const basicCourseNames = readBasicCourseNames(filename);
+aPerson.courses = basicCourseNames.map(name => new Course(name, false));
+
+// 但客户端也可能发现，直接更新课程列表显然更容易。
+
+for(const name of readBasicCourseNames(filename)) { 
+  aPerson.courses.push(new Course(name, false));
+}
+这就破坏了封装性，因为以此种方式更新列表Person类根本无从得知。
+这里仅仅封装了字段引用，而未真正封装字段的内容。
+```
+
+```js [恰当封装]
+
+class Person {
+ constructor (name) { 
+  this._name = name; 
+  this._courses = [];
+ }
+ get name() {
+  return this._name;
+ }
+ get courses() {
+  return this._courses; // [!code --]
+  return this._courses.slice(); // [!code ++]
+ }
+ set courses(aList) {
+  this._courses = aList; // [!code --]
+  this._courses = aList.slice(); // [!code ++]
+ }
+
+ addCourse(aCourse) {  // [!code ++]
+  this._courses.push(aCourse);
+ }
+
+ removeCourse(aCourse, fnIfAbsent = () => {throw new RangeError();}) { // [!code ++]
+  const index = this._courses.indexOf(aCourse);
+  if (index === -1) {
+  fnIfAbsent();
+  } else {
+  this._courses.splice(index, 1);
+  }
+ }
+}
+
+// 客户端代码
+for(const name of readBasicCourseNames(filename)) { 
+  aPerson.addCourse(new Course(name, false));
+}
+```
+
+:::
+
