--- a/前端基础/重构/05-封装/04-以查询取代临时变量.md
+++ b/前端基础/重构/05-封装/04-以查询取代临时变量.md
@@ -2,10 +2,160 @@
 
 ## 示意图
 
+![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
 
 ## 动机
 
+<sapn class="marker-text">临时变量的一个作用是保存某段代码的返回值，以便在函数的后面部分使用它。临时变量允许我引用之前的值，既能解释它的含义，还能避免对代码进行重复计算。但尽管使用变量很方便，很多时候还是值得更进一步，将它们抽取成函数。</sapn>
+
+[以查询取代临时变量（178）](../目录.md#以查询取代临时变量-178)手法只适用于处理某些类型的临时变量：那些只被计算一次且之后不再被修改的变量。
 
 ## 做法
 
+- 检查变量在使用前是否已经完全计算完毕，检查计算它的那段代码是否每次都能得到一样的值。
+- 如果变量目前不是只读的，但是可以改造成只读变量，那就先改造它。
+- 将为变量赋值的代码段提炼成函数。
+  - 如果变量和函数不能使用同样的名字，那么先为函数取个临时的名字。
+  - 确保待提炼函数没有副作用。若有，先应用将查询函数和[修改函数分离（306）](../目录.md#修改函数分离-306)）手法隔离副作用。
+- 应用内联变量（123）手法移除临时变量。
+
 ## 范例
+
+::: code-group
+
+```js [源]
+希望把basePrice和discountFactor两个临时变量变成函数。// [!code ++]
+class Order {
+   constructor(quantity, item) { 
+    this._quantity = quantity; 
+    this._item = item;
+  }
+
+  get price() {
+    var basePrice = this._quantity * this._item.price; 
+    var discountFactor = 0.98;
+    if (basePrice > 1000) {
+      discountFactor -= 0.03; 
+    }
+    return basePrice * discountFactor;
+  }
+}
+
+```
+
+```js [先从basePrice开始]
+class Order {
+   constructor(quantity, item) { 
+    this._quantity = quantity; 
+    this._item = item;
+  }
+
+  get price() {
+    const basePrice =  this.basePrice // [!code ++]
+    var discountFactor = 0.98;
+    if (basePrice > 1000) {
+      discountFactor -= 0.03; 
+    }
+    return basePrice * discountFactor;
+  }
+
+  get basePrice() {
+    return this._quantity * this._item.price;
+  }
+}
+
+```
+
+```js [内联变量（123）]
+
+class Order {
+   constructor(quantity, item) { 
+    this._quantity = quantity; 
+    this._item = item;
+  }
+
+  get price() {
+    const basePrice =  this.basePrice // [!code --]
+    var discountFactor = 0.98;
+    if (basePrice > 1000) { // [!code --]
+    if (this.basePrice > 1000) { // [!code ++]
+      discountFactor -= 0.03; 
+    }
+    return basePrice * discountFactor; // [!code --]
+    return this.basePrice * discountFactor; // [!code ++]
+  }
+
+  get basePrice() {
+    return this._quantity * this._item.price;
+  }
+}
+```
+
+```js [提炼函数（106）]
+class Order {
+   constructor(quantity, item) { 
+    this._quantity = quantity; 
+    this._item = item;
+  }
+
+  get price() {
+    var discountFactor = 0.98; // [!code --]
+    if (this.basePrice > 1000) {  // [!code --]
+      discountFactor -= 0.03;  // [!code --]
+    }
+  　const discountFactor = this.discountFactor; // [!code ++]
+  　return this.basePrice * discountFactor;
+  }
+
+  get discountFactor() {
+　　var discountFactor = 0.98;
+　　if (this.basePrice > 1000) {
+      discountFactor -= 0.03; 
+    }
+　　return discountFactor;
+  }
+
+  get basePrice() {
+    return this._quantity * this._item.price;
+  }
+}
+
+```
+
+```js [内联变量]
+class Order {
+   constructor(quantity, item) { 
+    this._quantity = quantity; 
+    this._item = item;
+  }
+
+  get price() {
+  　const discountFactor = this.discountFactor; // [!code --]
+    return this.basePrice * discountFactor;// [!code --]
+  　return this.basePrice * this.discountFactor; // [!code ++]
+  }
+
+  get discountFactor() {
+    const discountFactor = 0.98;
+    if (this.basePrice > 1000) {
+      discountFactor -= 0.03; 
+    }
+    return discountFactor;
+  }
+
+  get basePrice() {
+    return this._quantity * this._item.price;
+  }
+}
+
+```
+
+:::
+
+
+
+
+
+
+
+
