--- a/前端基础/重构/05-封装/05-提炼类.md
+++ b/前端基础/重构/05-封装/05-提炼类.md
@@ -3,10 +3,290 @@
 
 ## 示意图
 
+![LOGO](/public/image/refactoring/ExtractClass.png)
 
 ## 动机
 
+你也许听过类似这样的建议：<sapn class="marker-text">一个类应该是一个清晰的抽象，只处理一些明确的责任，等等。</sapn>但是在实际工作中，类会不断成长扩展。你会在这儿加入一些功能，在那儿加入一些数据。给某个类添加一项新责任时，你会觉得不值得为这项责任分离出一个独立的类。于是，随着责任不断增加，这个类会变得过分复杂。很快，你的类就会变成一团乱麻。
 
 ## 做法
 
+- 决定如何分解类所负的责任。
+- 创建一个新的类，用以表现从旧类中分离出来的责任。
+  - 如果旧类剩下的责任与旧类的名称不符，为旧类改名。
+- 构造旧类时创建一个新类的实例，建立“从旧类访问新类”的连接关系。
+- 对于你想搬移的每一个字段，运用[搬移字段（207）](../目录.md#搬移字段-207)搬移之。每次更改后运行测试。
+- 使用[搬移函数（198）](../目录.md#搬移函数-198)将必要函数搬移到新类。先搬移较低层函数（也就是“被其他函数调用”多于“调用其他函数”者）​。每次更改后运行测试。
+- 检查两个类的接口，去掉不再需要的函数，必要时为函数重新取一个适合新环境的名字。
+- 决定是否公开新的类。如果确实需要，考虑对新类应用[将引用对象改为值对象（252）](../目录.md#将引用对象改为值对象-252)使其成为一个值对象。
+
 ## 范例
+
+这里，我可以将与电话号码相关的行为分离到一个独立的类中
+
+::: code-group
+
+```js [源]
+这里，我可以将与电话号码相关的行为分离到一个独立的类中 // [!code ++]
+class Person {
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return `(${this.officeAreaCode}) ${this.officeNumber}`;
+  } 
+  get officeAreaCode() {
+    return this._officeAreaCode;
+  }
+  set officeAreaCode(arg)　{
+    this._officeAreaCode = arg;
+  } 
+  get officeNumber() {
+    return this._officeNumber;
+  }
+  set officeNumber(arg) {
+    this._officeNumber = arg;
+  }
+}
+
+```
+
+```js [电话类]
+class TelephoneNumber {
+}
+
+// 更新Person
+class Person {
+  constructor() {
+    this._telephoneNumber = new TelephoneNumber(); // [!code ++]
+  }
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return `(${this.officeAreaCode}) ${this.officeNumber}`;
+  } 
+  get officeAreaCode() {
+    return this._officeAreaCode;
+  }
+  set officeAreaCode(arg)　{
+    this._officeAreaCode = arg;
+  } 
+  get officeNumber() {
+    return this._officeNumber;
+  }
+  set officeNumber(arg) {
+    this._officeNumber = arg;
+  }
+}
+
+```
+
+```js [搬移字段（207）]
+
+class TelephoneNumber {
+  get officeAreaCode() { // [!code ++]
+    return this._officeAreaCode;
+  } 
+  set officeAreaCode(arg) { // [!code ++]
+    this._officeAreaCode = arg;
+  }
+}
+
+// 更新Person
+
+class Person {
+  constructor() {
+    this._telephoneNumber = new TelephoneNumber(); // [!code ++]
+  }
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return `(${this.officeAreaCode}) ${this.officeNumber}`;
+  } 
+  get officeAreaCode() {
+    return this._officeAreaCode;// [!code --]
+    return this._telephoneNumber.officeAreaCode // [!code ++]
+  }
+  set officeAreaCode(arg)　{
+    this._officeAreaCode = arg; // [!code --]
+    this._telephoneNumber.officeAreaCode = arg // [!code ++]
+  } 
+  get officeNumber() {
+    return this._officeNumber;
+  }
+  set officeNumber(arg) {
+    this._officeNumber = arg;
+  }
+}
+
+```
+
+```js [搬移另一个字段]
+class TelephoneNumber {
+  get officeAreaCode()    {
+    return this._officeAreaCode;
+  } 
+  set officeAreaCode(arg) {
+    this._officeAreaCode = arg;
+  }
+
+  get officeNumber() { // [!code ++]
+    return this._officeNumber;
+  } 
+  set officeNumber(arg) { // [!code ++]
+    this._officeNumber = arg;
+  }
+}
+
+
+// 更新 Person
+
+class Person {
+  constructor() {
+    this._telephoneNumber = new TelephoneNumber();
+  }
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return `(${this.officeAreaCode}) ${this.officeNumber}`;
+  } 
+  get officeAreaCode() {
+    return this._telephoneNumber.officeAreaCode 
+  }
+  set officeAreaCode(arg)　{
+    this._telephoneNumber.officeAreaCode = arg
+  } 
+  get officeNumber() {
+    return this._officeNumber; // [!code --]
+    return this._telephoneNumber.officeNumber // [!code ++]
+  }
+  set officeNumber(arg) {
+    this._officeNumber = arg; // [!code --]
+     this._telephoneNumber.officeNumber = arg // [!code ++]
+  }
+}
+
+```
+
+```js [搬移取值]
+
+class TelephoneNumber {
+  get officeAreaCode()    {
+    return this._officeAreaCode;
+  } 
+  set officeAreaCode(arg) {
+    this._officeAreaCode = arg;
+  }
+
+  get officeNumber() {
+    return this._officeNumber;
+  } 
+  set officeNumber(arg) {
+    this._officeNumber = arg;
+  }
+  get telephoneNumber() { // [!code ++]
+    return `(${this.officeAreaCode}) ${this.officeNumber}`;
+  }
+}
+
+// 更新Person
+
+class Person {
+  constructor() {
+    this._telephoneNumber = new TelephoneNumber();
+  }
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return `(${this.officeAreaCode}) ${this.officeNumber}`; // [!code --]
+    return this._telephoneNumber.telephoneNumber // [!code ++]
+  } 
+  get officeAreaCode() {
+    return this._telephoneNumber.officeAreaCode 
+  }
+  set officeAreaCode(arg)　{
+    this._telephoneNumber.officeAreaCode = arg
+  } 
+  get officeNumber() {
+    return this._telephoneNumber.officeNumber 
+  }
+  set officeNumber(arg) {
+    this._telephoneNumber.officeNumber = arg 
+  }
+}
+
+
+```
+
+```js [重命名]
+“电话号码”显然不该拥有“办公室”​（office）的概念，因此我得重命名一下变量。
+class TelephoneNumber {
+  get areaCode()    {
+    return this._areaCode;
+  } 
+  set areaCode(arg) {
+    this._areaCode = arg;
+  }
+
+  get number() {
+    return this._number;
+  } 
+  set number(arg) {
+    this._number = arg;
+  }
+  get toString() {
+    return `(${this.areaCode}) ${this.number}`;
+  }
+}
+
+
+class Person {
+  constructor() {
+    this._telephoneNumber = new TelephoneNumber();
+  }
+  get name() 　 {
+    return this._name;
+  } 
+  set name(arg) {
+    this._name = arg;
+  }
+  get telephoneNumber() {
+    return this._telephoneNumber.toString() 
+  } 
+  get officeAreaCode() {
+    return this._telephoneNumber.areaCode 
+  }
+  set officeAreaCode(arg)　{
+    this._telephoneNumber.areaCode = arg
+  } 
+  get officeNumber() {
+    return this._telephoneNumber.number 
+  }
+  set officeNumber(arg) {
+    this._telephoneNumber.number = arg 
+  }
+}
+
+```
+
+:::
+
