--- a/前端基础/重构/05-封装/06-内联类.md
+++ b/前端基础/重构/05-封装/06-内联类.md
@@ -1,13 +1,133 @@
 
 # 内联类
 
-
 ## 示意图
 
+![LOGO](/public/image/refactoring/InlineClass.png)
 
 ## 动机
 
+内联类正好与[提炼类（182）](../目录.md#提炼类-182)相反。如果一个类不再承担足够责任，不再有单独存在的理由。
+
+应用这个手法的另一个场景是，我手头有两个类，想重新安排它们肩负的职责，并让它们产生关联。这时我发现先用本手法将它们内联成一个类再用提炼类（182）去分离其职责会更加简单。这是重新组织代码时常用的做法：有时把相关元素一口气搬移到位更简单，但有时先用内联手法合并各自的上下文，再使用提炼手法再次分离它们会更合适。
 
 ## 做法
 
+- 对于待内联类（源类）中的所有public函数，在目标类上创建一个对应的函数，新创建的所有函数应该直接委托至源类。
+- 修改源类public方法的所有引用点，令它们调用目标类对应的委托方法。每次更改后运行测试。
+- 将源类中的函数与数据全部搬移到目标类，每次修改之后进行测试，直到源类变成空壳为止。
+- 将源类中的函数与数据全部搬移到目标类，每次修改之后进行测试，直到源类变成空壳为止。
+
 ## 范例
+
+下面这个类存储了一次物流运输（shipment）的若干跟踪信息（tracking information）​。
+
+TrackingInformation类过去可能有很多光荣职责，但现在我觉得它已不再能肩负起它的责任，因此我希望将它内联到Shipment类里。
+
+::: code-group
+
+```js [源]
+
+class TrackingInformation {
+　get shippingCompany() {
+    return this._shippingCompany;
+  } 
+　set shippingCompany(arg) {
+    this._shippingCompany = arg;
+  } 
+　get trackingNumber()    {
+    return this._trackingNumber;
+  } 
+　set trackingNumber(arg) {
+    this._trackingNumber = arg;
+  } 
+　get display()            {
+　　return `${this.shippingCompany}: ${this.trackingNumber}`;
+　}
+}
+
+class Shipment {
+ get trackingInfo() {
+ 　return this._trackingInformation.display;
+ }
+ get trackingInformation() {
+  return this._trackingInformation;
+ } 
+ set trackingInformation(aTrackingInformation) {
+ 　this._trackingInformation = aTrackingInformation;
+ }
+}
+
+// 现有调用方
+aShipment.trackingInformation.shippingCompany = request.vendor;
+
+```
+
+```js [创建一个委托方法]
+class Shipment {
+ get trackingInfo() {
+ 　return this._trackingInformation.display;
+ }
+ get trackingInformation() {
+  return this._trackingInformation;
+ } 
+ set trackingInformation(aTrackingInformation) {
+ 　this._trackingInformation = aTrackingInformation;
+ }
+  //  委托方法
+ set shippingCompany(arg) { // [!code ++]
+  this._trackingInformation.shippingCompany = arg;
+ }
+}
+
+```
+
+```js [内联函数（115）]
+class Shipment {
+ get trackingInfo() {
+ 　return this._trackingInformation.display;// [!code --]
+　 return `${this.shippingCompany}: ${this.trackingNumber}`;// [!code ++]
+ 
+ }
+ get trackingInformation() {
+  return this._trackingInformation;
+ } 
+ set trackingInformation(aTrackingInformation) {
+ 　this._trackingInformation = aTrackingInformation;
+ }
+  //  委托方法
+ set shippingCompany(arg) { 
+  this._trackingInformation._shippingCompany = arg;
+ }
+ get shippingCompany() { // [!code ++]
+  return this._trackingInformation._shippingCompany;
+ }
+}
+
+```
+
+```js [删除TrackingInformation]
+
+由目标类Shipment来引用shippingCompany // [!code ++]
+
+class Shipment {
+  get trackingInfo() {
+  　return `${this.shippingCompany}: ${this.trackingNumber}`;
+  }
+  get shippingCompany()    {
+   return this._shippingCompany;
+  } 
+  set shippingCompany(arg) {
+   this._shippingCompany = arg;
+  } 
+  get trackingNumber()    {
+   return this._trackingNumber;
+  } 
+  set trackingNumber(arg) {
+   this._trackingNumber = arg;
+  }
+}
+
+```
+
+:::
