--- a/前端基础/重构/05-封装/09-替换算法.md
+++ b/前端基础/重构/05-封装/09-替换算法.md
@@ -3,10 +3,20 @@
 
 ## 示意图
 
+![LOGO](/public/image/refactoring/SubstituteAlgorithm.png)
 
 ## 动机
 
 
+如果我发现做一件事可以有更清晰的方式，我就会用比较清晰的方式取代复杂的方式。
+
+
+
 ## 做法
 
-## 范例
+- 整理一下待替换的算法，保证它已经被抽取到一个独立的函数中。
+- 先只为这个函数准备测试，以便固定它的行为。
+- 准备好另一个（替换用）算法。
+- 执行静态检查。
+- 运行测试，比对新旧算法的运行结果。如果测试通过，那就大功告成；否则，在后续测试和调试过程中，以旧算法为比较参照标准。
+
