--- a/前端基础/重构/目录.md
+++ b/前端基础/重构/目录.md
@@ -61,9 +61,59 @@
 
 
 
+## 封装记录（162）
+
+![LOGO](/public/image/refactoring/EncapsulateRecord.png)
+
+## 封装集合（170）
+
+![LOGO](/public/image/refactoring/EncapsulateCollection.png)
+
+## 以对象取代基本类型（174）
+
+![LOGO](/public/image/refactoring/ReplacePrimitiveWithObject.png)
+
 ## 以查询取代临时变量（178）
 
 ![LOGO](/public/image/refactoring/ReplaceTempWithQuery.png)
+
+## 提炼类（182）
+
+![LOGO](/public/image/refactoring/ExtractClass.png)
+
+## 内联类（186）
+
+![LOGO](/public/image/refactoring/InlineClass.png)
+
+## 隐藏委托关系（189）
+
+![LOGO](/public/image/refactoring/HideDelegate.png)
+
+## 移除中间人（192）
+
+![LOGO](/public/image/refactoring/RemoveMiddleMan.png)
+
+
+
+## 替换算法（195）
+
+![LOGO](/public/image/refactoring/SubstituteAlgorithm.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -74,8 +124,6 @@
 ## 移动语句（223）
 
 ![LOGO](/public/image/refactoring/SlideStatements.png)
-
-
 
 ## 搬移函数（198）
 
@@ -89,17 +137,13 @@
 
 ![LOGO](/public/image/refactoring/ReplaceLoopWithPipeline.png)
 
-
 ## 以多态取代条件表达式（272）
 
 ![LOGO](/public/image/refactoring/ReplaceConditionalWithPolymorphism.png)
 
-
 ## 子类取代类型码（362）
 
-
 ![LOGO](/public/image/refactoring/ReplaceTypeCodeWithSubclasses.png)
-
 
 ## 工厂函数取代构造函数（334）
 
@@ -109,14 +153,9 @@
 
 ![LOGO](/public/image/refactoring/ParameterizeFunction.png)
 
-
-
 ## 字段改名（244）
 
 ![LOGO](/public/image/refactoring/RenameField.png)
-
-
-
 
 ## 保持对象完整（319）
 
@@ -134,91 +173,51 @@
 
 ![LOGO](/public/image/refactoring/ReplaceParameterWithQuery.png)
 
-
 ## 移除标记参数（314）
 
 ![LOGO](/public/image/refactoring/RemoveFlagArgument.png)
-
-
-
-
 
 ## 拆分变量（240）
 
 ![LOGO](/public/image/refactoring/SplitVariable.png)
 
-
 ## 将查询函数和修改函数分离（306）
 
 ![LOGO](/public/image/refactoring/SeparateQueryFromModifier.png)
-
 
 ## 移除设值函数（331）
 
 ![LOGO](/public/image/refactoring/RemoveSettingMethod.png)
 
-
 ## 将引用对象改为值对象（252）
 
 ![LOGO](/public/image/refactoring/ChangeReferenceToValue.png)
-
-
-## 提炼类（182）
-
-![LOGO](/public/image/refactoring/ExtractClass.png)
-
-## 内联类（186）
-
-![LOGO](/public/image/refactoring/InlineClass.png)
-
-
-## 以对象取代基本类型（174）
-
-![LOGO](/public/image/refactoring/ReplacePrimitiveWithObject.png)
-
 
 ## 折叠继承体系（380）
 
 ![LOGO](/public/image/refactoring/CollapseHierarchy.png)
 
-
 ## 移除死代码（237）
 
 ![LOGO](/public/image/refactoring/RemoveDeadCode.png)
-
 
 ## 引入特例（289）
 
 ![LOGO](/public/image/refactoring/IntroduceSpecialCase.png)
 
 
-## 隐藏委托关系（189）
-
-![LOGO](/public/image/refactoring/HideDelegate.png)
-
-## 移除中间人（192）
-
-![LOGO](/public/image/refactoring/RemoveMiddleMan.png
 
 ## 以委托取代超类（399）
 
 ![LOGO](/public/image/refactoring/ReplaceSuperclassWithDelegate.png)
 
-
 ## 以委托取代子类（381）
 
 ![LOGO](/public/image/refactoring/ReplaceSubclassWithDelegate.png)
 
-
 ## 提炼超类（375）
 
 ![LOGO](/public/image/refactoring/ExtractSuperclass.png)
-
-
-## 封装记录（162）
-
-![LOGO](/public/image/refactoring/EncapsulateRecord.png)
-
 
 ## 函数下移（359）
 
@@ -231,8 +230,6 @@
 ## 引入断言（302）
 
 ![LOGO](/public/image/refactoring/IntroduceAssertion.png)
-
-
 
 ## 搬移语句到调用者（217）
 ![LOGO](/public/image/refactoring/MoveStatementsToCallers.png)
