--- a/前端基础/重构/05-封装/03-以对象取代基本类型.md
+++ b/前端基础/重构/05-封装/03-以对象取代基本类型.md
@@ -1,12 +1,172 @@
 # 以对象取代基本类型
 
-
 ## 示意图
 
+![LOGO](/public/image/refactoring/ReplacePrimitiveWithObject.png)
 
 ## 动机
 
+开发初期，你往往决定以简单的数据项表示简单的情况，比如使用数字或字符串等。但随着开发的进行，你可能会发现，这些简单数据项不再那么简单了。比如说，一开始你可能会用一个字符串来表示“电话号码”的概念，但是随后它又需要“格式化”​“抽取区号”之类的特殊行为。这类逻辑很快便会占领代码库，制造出许多重复代码，增加使用时的成本。
+
+一旦我发现对某个数据的操作不仅仅局限于打印时，我就会为它创建一个新类。
 
 ## 做法
 
+- 如果变量尚未被封装起来，先使用[封装变量（132）](../目录.md#封装变量-132)封装它。
+- 为这个数据值创建一个简单的类。类的构造函数应该保存这个数据值，并为它提供一个取值函数
+- 修改第一步得到的设值函数，令其创建一个新类的对象并将其存入字段，如果有必要的话，同时修改字段的类型声明。
+- 修改取值函数，令其调用新类的取值函数，并返回结果。
+- 考虑对第一步得到的访问函数使用[函数改名（124）](../目录.md#函数改名-124)，以便更好反映其用途。
+- 考虑应用[将引用对象改为值对象（252）](../目录.md#将引用对象改为值对象-252)或[将值对象改为引用对象（（256）](../目录.md#将值对象改为引用对象（-256)，明确指出新对象的角色是值对象还是引用对象。
+
 ## 范例
+
+我将从一个简单的订单（Order）类开始。该类从一个简单的记录结构里读取所需的数据，这其中有一个订单优先级（priority）字段，它是以字符串的形式被读入的。
+
+::: code-group
+
+```js [源]
+
+class Order {
+  constructor(data) { 
+    this.priority = data.priority;
+  }
+}
+
+// 客户端
+highPriorityCount = 
+orders.filter(o => "high" === o.priority || 
+                   "rush" === o.priority)
+              .length;
+
+```
+
+```js [封装变量（132）]
+
+无论何时，当我与一个数据值打交道时，第一件事一定是对它使用封装变量（132）。
+
+class Order {
+  constructor(data) { 
+    this.priority = data.priority;
+  }
+
+  get priority() {
+    return this._priority;
+  } 
+  set priority(aString) {
+    this._priority = aString;
+  }
+}
+
+
+```
+
+```js [优先级类]
+
+
+class Priority {
+  constructor(value) {
+    this._value = value;
+  } 
+  toString() {
+    return this._value;
+  }
+}
+
+```
+
+```js [修改访问函数]
+
+class Order {
+  constructor(data) { 
+    this.priority = data.priority;
+  }
+  
+  get priority() { // [!code --]
+  get priorityString() { // [!code ++]
+    return this._priority; // [!code --]
+    return this._priority.toString(); // [!code ++]
+  }
+  set priority(aString) {
+    this._priority = aString; // [!code --]
+    this._priority = new Priority(aString); // [!code ++]
+  }
+}
+
+// 客户端
+
+highPriorityCount = orders.filter(o => "high" === o.priorityString || 
+                                       "rush" === o.priorityString).length;
+
+```
+
+```js [直接返回Priority]
+
+class Order {
+  constructor(data) { 
+    this.priority = data.priority;
+  }
+
+  get priority() {
+    return this._priority;
+ }
+  get priorityString() {
+    return this._priority.toString();
+  }
+  set priority(aString) {
+    this._priority = new Priority(aString);
+  }
+}
+
+// 客户端
+highPriorityCount = orders.filter(o => "high" === o.priority.toString() || 
+                                       "rush" === o.priority.toString())
+                    .length;
+```
+
+```js [扩展 Priority]
+现在新的Priority类可以容纳更多业务行为——无论是新的业务代码，
+还是从别处搬移过来的
+
+class Priority {
+  constructor(value) {
+    if (value instanceof Priority) {
+      return value; 
+    }
+    if (Priority.legalValues().includes(value)) {
+      this._value = value; 
+    } else {
+      throw new Error(`<${value}> is invalid for Priority`);
+    }
+   
+  }
+  toString() {
+    return this._value;
+  }
+  get _index() {
+    return Priority.legalValues().findIndex(s => s === this._value);
+  } 
+  static legalValues() {
+    return ['low', 'normal', 'high', 'rush'];
+  }
+
+  equals(other) {
+    return this._index === other._index;
+  } 
+  higherThan(other) {
+    return this._index > other._index;
+  } 
+  lowerThan(other) {
+   return this._index < other._index;
+  }
+}
+
+
+// 客户端
+highPriorityCount = orders.filter(o => 
+          o.priority.higherThan(new Priority("normal"))
+        ).length;
+
+```
+
+:::
