--- a/前端基础/重构/05-封装/07-隐藏委托关系.md
+++ b/前端基础/重构/05-封装/07-隐藏委托关系.md
@@ -1,13 +1,93 @@
 
 # 隐藏委托关系
 
-
 ## 示意图
 
+![LOGO](/public/image/refactoring/HideDelegate.png)
 
 ## 动机
 
+一个好的模块化的设计，​“封装”即使不是其最关键特征，也是最关键特征之一。​“封装”意味着每个模块都应该尽可能少了解系统的其他部分。
+
+<sapn class="marker-text">如果某些客户端先通过服务对象的字段得到另一个对象（受托类）​，然后调用后者的函数，那么客户就必须知晓这一层委托关系。万一受托类修改了接口，变化会波及通过服务对象使用它的所有客户端。我可以在服务对象上放置一个简单的委托函数，将委托关系隐藏起来，从而去除这种依赖。这么一来，即使将来委托关系发生变化，变化也只会影响服务对象，而不会直接波及所有客户端。</sapn>
+
+> 我理解是用变量或者什么的提取一下，这样改一个地方，所有地方都会跟着更新
 
 ## 做法
 
+- 对于每个委托关系中的函数，在服务对象端建立一个简单的委托函数。
+- 调整客户端，令它只调用服务对象提供的函数。每次调整后运行测试。
+- 如果将来不再有任何客户端需要取用Delegate（受托类）​，便可移除服务对象中的相关访问函数。
+
 ## 范例
+
+本例从两个类开始，代表“人”的Person和代表“部门”的Department。
+
+::: code-group
+
+```js [源]
+class Person {
+	constructor(name) { 
+	　this._name = name;
+	}
+	get name() {
+		return this._name;
+	}
+	get department()    {
+		return this._department;
+	} 
+	set department(arg) {
+		this._department = arg;
+	}
+}
+
+class Department {
+	get chargeCode() {
+		return this._chargeCode;
+	} 
+	set chargeCode(arg) {
+		this._chargeCode = arg;
+	} 
+	get manager() {
+		return this._manager;
+	}
+	set manager(arg) {
+		this._manager = arg;
+	}
+}
+
+// 有些客户端希望知道某人的经理是谁，为此，它必须先取得Department对象。
+// 这样的编码就对客户端揭露了Department的工作原理，于是客户知道：
+// Department负责追踪“经理”这条信息。
+// 如果对客户隐藏Department，可以减少耦合。
+// 为了这一目的，我在Person中建立一个简单的委托函数。
+// 客户端代码
+manager = aPerson.department.manager;
+```
+
+```js [委托函数]
+
+class Person {
+	constructor(name) { 
+	　this._name = name;
+	}
+	get name() {
+		return this._name;
+	}
+	get department()    {
+		return this._department;
+	} 
+	set department(arg) {
+		this._department = arg;
+	}
+	get manager() { // [!code ++]
+		return this._department.manager;
+	}
+}
+```
+
+:::
+
+
+
+
