--- a/前端基础/重构/05-封装/08-移除中间人.md
+++ b/前端基础/重构/05-封装/08-移除中间人.md
@@ -3,10 +3,67 @@
 
 ## 示意图
 
+![LOGO](/public/image/refactoring/RemoveMiddleMan.png)
 
 ## 动机
+
+在[隐藏委托关系（189）](../目录.md#隐藏委托关系-189)的“动机”一节中，我谈到了“封装受托对象”的好处。但是这层封装也是有代价的。每当客户端要使用受托类的新特性时，你就必须在服务端添加一个简单委托函数。随着受托类的特性（功能）越来越多，更多的转发函数就会使人烦躁。服务类完全变成了一个[中间人（81）](../目录.md#中间人-81)，此时就应该让客户直接调用受托类
+
+得笨拙。重构的意义就在于：你永远不必说对不起——只要把出问题的地方修补好就行了。
 
 
 ## 做法
 
+- 为受托对象创建一个取值函数。
+- 对于每个委托函数，让其客户端转为连续的访问函数调用。每次替换后运行测试。
+  - 替换完委托方法的所有调用点后，你就可以删掉这个委托方法了。
+  - 这能通过可自动化的重构手法来完成，你可以先对受托字段使用[封装变量（132）](../目录.md#封装变量-132)，再应用
+[内联函数（115）](../目录.md#内联函数-115)内联所有使用它的函数。
+
 ## 范例
+
+从一个Person类开始了，这个类通过维护一个部门对象来决定某人的经理是谁。
+
+```js
+
+// 客户端代码
+manager = aPerson.manager;
+
+class Person {
+	get manager() {
+		return this._department.manager;
+	}
+}
+
+class Department {
+	get manager() {
+		return this._manager;
+	}
+}
+
+使用和封装Department都很简单。
+但如果大量函数都这么做，我就不得不在Person之中安置大量委托行为。
+这就该是移除中间人的时候了
+```
+
+
+::: code-group
+
+```js [获取受委托对象]
+
+class Person {
+	get department() {
+		return this._department;
+	}
+}
+
+// 替换客户端
+manager = aPerson.department.manager;
+
+```
+
+:::
+
+
+完成对客户端引用点的替换后，我就可以从Person中移除manager方法了。我可以重复此法，移除Person中其他类似的简单委托函数。
+
